syntax = "proto3";

package user2;

option java_multiple_files = true;

service UserListService {
    rpc ListUsers (ListUsersRequest) returns (stream ListUserResponse);
}

message ListUsersRequest {
  string filter = 1;
}

message ListUserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}